<resources>
    <string name="app_name">ecommerce_app</string>
    <string name="changeLanguage">Change Language</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="english">English</string>
    <string name="dutch">Dutch</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="make_account">Make an account!</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change Theme</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>