<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bottomnavbar.fragments.LanguageFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:padding="25sp"
                android:textAlignment="center"
                android:text="@string/changeLanguage"

                />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
            >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="30sp"
                >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45sp"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical"
                    >
                        <TextView
                            android:id="@+id/set_english"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/english"
                            android:textSize="20sp"
                        />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45sp"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical"
                    >
                        <TextView
                            android:id="@+id/set_dutch"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/dutch"
                            android:textSize="20sp"
                        />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>






